@@ -11,7 +11,8 @@ Post-v2.12.0
      * Add option to enable, disable and query TCP sequence checking in
        conntrack.
    - DPDK:
-     * Add hardware offload support for output, drop and set MAC actions.
+     * Add hardware offload support for output, drop and set actions of
+       MAC and IPv4.
 
 v2.12.0 - 03 Sep 2019
 ---------------------
